# fastapi_project

./: .env.local  .gitignore  README.md  api.py  app.py  pyproject.toml  typeddicts.py
