[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi-cloud-cli>=0.20.0",
    "fastapi[standard]>=0.136.3",
    "supabase>=2.31.0",
]

[tool.vercel]
entrypoint = "backend.server:app"
